# stratapy

./: .gitignore  .readthedocs.yml  CITATION.cff  CREDITS.txt  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_static/: styles.css
docs/customisation/: customisation_options.rst  figure_layout.rst  labels.rst  legend.rst
docs/customisation/additional_elements/: chronostratigraphy.rst  index.rst  sample_locations.rst  text_labels.rst  trends.rst  twin_y_axis.rst
docs/customisation/adjusting_assets/: features.rst  index.rst  lithologies.rst  minerals.rst
docs/customisation/advanced_plotting/: correlated_logs.rst  custom_figure_layouts.rst  index.rst  multi_fig.rst
docs/customisation/grain_size/: grain_axis_brackets.rst  grain_axis_values.rst  index.rst
docs/gallery/: UKGeos.rst  cyprusLog.rst  geochemistry.rst  sedimentaryLogs.rst  tephrochronology.rst
docs/getting_started/: what_is_stratapy.rst
docs/getting_started/basic_log_formats/: features_mins_lens.rst  index.rst  log_layout.rst
docs/getting_started/installation/: first_time_setup.rst  index.rst  installation.rst  online_platforms.rst
docs/getting_started/tutorial/: file_format.rst  index.rst  your_first_figure.rst
docs/reference/: available_assets.rst  changelog.rst  gallery.rst  grainsize_reference.rst
docs/reference/api_reference/: LogClass.rst  (+3 more)
examples/: Figure6Data.csv  Tutorial.ipynb
stratapy/: __init__.py  core.py  plot.py  plotting_help.py  setup.py  utils.py
stratapy/assets/: GeologicalTimescale.csv
tests/: test_stratapy.py
(+36 files in other folders)
