[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratapy"
version = "0.9.0"
description = "A tool for automated stratigraphic log visualisation"
keywords = ["stratigraphy", "stratigraphic log", "visualisation", "python"]
authors = [
    { name="Jack Smith" },
    { name="Christina Antoniou" },
    { name="Ruaridh Alexander" }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.7"

dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "scipy>=1.10",
    "pandas>=2.2",
    "Pillow>=9.0.1",
    "platformdirs>=4.3.8",
    "Shapely>=2.0.0",
    "numexpr>=2.10",
    "matplotlib-inline>=0.1.6"
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.3",
    "sphinx-design>=0.5",
]

[tool.setuptools]
packages = ["stratapy"]
include-package-data = true

[project.urls]
Homepage = "https://github.com/Jack6228/stratapy"
Documentation = "https://stratapy.readthedocs.io/en/latest/"